--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,5 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="current_bus_stop">Hållplats:</string>
+    <string name="current_bus_stop">Min hållplats:</string>
 </resources>
