Did some code formatting

--- a/app/app/src/main/res/values/strings.xml
+++ b/app/app/src/main/res/values/strings.xml
@@ -2,5 +2,5 @@
     <string name="app_name">Åke</string>
 
     <string name="scan">Start Scanning!</string>
-    <string name="buswifiname">Thomas</string>
+    <string name="buswifiname">ElectriCity</string>
 </resources>
