--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="current_bus_stop">Min hållplats:</string>
     <string name="scan">Start Scanning!</string>
     <string name="buswifiname">ElectriCity</string>
+    <string name="info_arrives_in">Ankommer om</string>
+    <string name="info_min">min</string>
 </resources>
