Added new layouts

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,9 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_example">Example action</string>
+    <string name="your_ticket">Din Biljett</string>
+    <string name="latest">Senaste</string>
+    <string name="charge">Saldo</string>
+    <string name="minutes">min</string>
+    <string name="font">sans_serif_thin</string>
 </resources>
