--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,5 +25,5 @@
     <string name="latest">Senaste</string>
     <string name="charge">Saldo</string>
     <string name="minutes">min</string>
-    <string name="font">sans_serif_thin</string>
+    <string name="font">sans-serif-thin</string>
 </resources>
