Updated string resources. Remeber to translate all of them to english and create a new file for swedish strings some day...

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,7 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_example">Example action</string>
+
+    <string name="info_bus_name_prefix"> </string>
+    <string name="info_bus_name_suffix">:an</string>
 </resources>
