Changed fragment to enable user to click for ticket

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="charge">Saldo</string>
     <string name="minutes">min</string>
     <string name="font">sans-serif-thin</string>
+    <string name="press_for_ticket">tryck för att stämpla</string>
 </resources>
