--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="buswifiname">ElectriCity</string>
     <string name="info_bus_name">7:an</string>
     <string name="info_arrives_in">ankommer om</string>
-    <string name="info_min">min</string>
+    <string name="info_min">minuter</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="title_activity_hamburger">Hamburger</string>
 
@@ -25,4 +25,6 @@
     <string name="arrive_at_destination">är framme om</string>
     <string name="arrived_at_destination">Framme vid destinationen</string>
     <string name="arrives_in">ankommer om</string>
+    <string name="minutes">minuter</string>
+    <string name="minute">minut</string>
 </resources>
