--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,9 +22,13 @@
 
     <string name="action_example">Example action</string>
 
-    <string name="arrive_at_destination">är framme om</string>
+    <string name="arrive_at_destination">anländer om</string>
     <string name="arrived_at_destination">Framme vid destinationen</string>
     <string name="arrives_in">ankommer om</string>
     <string name="minutes">minuter</string>
     <string name="minute">minut</string>
+    <string name="departures_in">avgår om</string>
+    <string name="to">till</string>
+    <string name="from">från</string>
+    <string name="track">Läge</string>
 </resources>
