--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,7 @@
     <string name="track">Track</string>
 
     <string name="text_want_to_go_to">I want to travel to:</string>
+    <string name="text_to">till:</string>
 
     <string name="your_ticket">My ticket</string>
     <string name="latest">Latest</string>
@@ -35,5 +36,4 @@
     <string name="time_never">Never</string>
     <string name="empty_charge">0 kr</string>
 
-<!--&gt;>>>>>> master-->
 </resources>
