--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,5 +44,7 @@
     <string name="time_never">Aldrig</string>
     <string name="empty_charge">0 kr</string>
 
->>>>>>> master
+    <string name="AlarmTicker">Stop! Hammer time!</string>
+    <string name="AlarmTitle">Arrived</string>
+    <string name="AlarmText">The next stop is your destination. Time to get off!</string>
 </resources>
