Added string NOW/NU

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,7 @@
     <string name="to">to</string>
     <string name="from">from</string>
     <string name="track">Track</string>
+    <string name="now">Now</string>
 
     <string name="text_want_to_go_to">I want to travel to:</string>
 
