--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -22,6 +22,7 @@
     <string name="to">till</string>
     <string name="from">från</string>
     <string name="track">Läge</string>
+    <string name="now">Nu</string>
 
     <string name="text_want_to_go_to">Jag vill åka till:</string>
 
