Show NOW instead of 0 minutes. Shows ARRIVED when has arrived to the destination. Uses EC_Client to se if anyone has pressed the stop button (Still not perfect, only works if we have detected that we are on the bus using WiFi-finder and not using Västtrafik real time data) Now matches source and destination stops with those in JourneyDetails using names instead of IDs

--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -19,6 +19,7 @@
     <string name="minutes">minuter</string>
     <string name="minute">minut</string>
     <string name="departures_in">avgår om</string>
+    <string name="departures">avgår</string>
     <string name="to">till</string>
     <string name="from">från</string>
     <string name="track">Läge</string>
@@ -33,5 +34,11 @@
     <string name="press_for_ticket">tryck för att stämpla</string>
     <string name="time_never">Aldrig</string>
     <string name="empty_charge">0 kr</string>
+
+    <string name="ARRIVED">FRAMME</string>
+    <string name="NOW">NU</string>
+
+    <string name="info_from">Från:</string>
+    <string name="info_to">Till:</string>
 
 </resources>
