--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,17 +13,26 @@
     <string name="navigation_drawer_open">Open menu</string>
     <string name="navigation_drawer_close">Close menu</string>
 
-
     <string name="arrive_at_destination">arrives at the destination in</string>
     <string name="arrived_at_destination">Framme vid destinationen</string>
     <string name="arrives_in">arrives in</string>
     <string name="minutes">minutes</string>
     <string name="minute">minute</string>
     <string name="departures_in">departures in</string>
+    <string name="departures">departures</string>
+
     <string name="to">to</string>
     <string name="from">from</string>
     <string name="track">Track</string>
     <string name="now">Now</string>
+
+    <string name="ARRIVED">ARRIVED</string>
+    <string name="NOW">NOW</string>
+
+    <string name="info_from">From:</string>
+    <string name="info_to">To:</string>
+    <string name="arrives">arrives</string>
+
 
     <string name="text_want_to_go_to">I want to travel to:</string>
 
@@ -40,4 +49,6 @@
     <string name="AlarmTicker">Stop! Hammer time!</string>
     <string name="AlarmTitle">Arrived</string>
     <string name="AlarmText">The next stop is your destination. Time to get off!</string>
+
+
 </resources>
