--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,11 +4,9 @@
     <string name="current_bus_stop">My stop:</string>
     <string name="buswifiname">ElectriCity</string>
 
-    <string name="title_section1">My trip</string>
-    <string name="title_section2">Pay</string>
-    <string name="title_section3">Account</string>
-    <string name="title_section4">Settings</string>
-    <string name="title_section5">History</string>
+    <string name="title_section_trip">My trip</string>
+    <string name="title_section_payment">Pay</string>
+    <string name="title_section_settings">Settings</string>
 
     <string name="navigation_drawer_open">Open menu</string>
     <string name="navigation_drawer_close">Close menu</string>
