--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,8 +24,8 @@
     <string name="track">Track</string>
     <string name="now">Now</string>
 
-    <string name="ARRIVED">ARRIVED</string>
-    <string name="NOW">NOW</string>
+    <string name="ARRIVED">arrived</string>
+    <string name="NOW">now</string>
 
     <string name="info_from">From:</string>
     <string name="info_to">To:</string>
