Changed text in info

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
     <string name="arrives_in">arrives in</string>
     <string name="minutes">minutes</string>
     <string name="minute">minute</string>
-    <string name="departures_in">departures in</string>
+    <string name="departures_in">departs in</string>
     <string name="departures">departures</string>
 
     <string name="to">to</string>
