--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -21,7 +21,6 @@
     <string name="to">till</string>
     <string name="from">från</string>
     <string name="track">Läge</string>
-    <string name="now">Nu</string>
 
     <string name="text_want_to_go_to">Jag vill åka till:</string>
 
@@ -34,7 +33,7 @@
     <string name="empty_charge">0 kr</string>
 
     <string name="ARRIVED">framme</string>
-    <string name="NOW">nu</string>
+    <string name="NOW">Nu</string>
 
     <string name="info_from">Från:</string>
     <string name="info_to">Till:</string>
