--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="minutes">minutes</string>
     <string name="minute">minute</string>
     <string name="departures_in">departs in</string>
-    <string name="departures">departures</string>
+    <string name="departures">departs</string>
 
     <string name="to">to</string>
     <string name="from">from</string>
