--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -32,8 +32,8 @@
     <string name="time_never">Aldrig</string>
     <string name="empty_charge">0 kr</string>
 
-    <string name="ARRIVED">framme</string>
-    <string name="NOW">Nu</string>
+    <string name="arrived">framme</string>
+    <string name="now">Nu</string>
 
     <string name="info_from">Från:</string>
     <string name="info_to">Till:</string>
